--- a/.env.production
+++ b/.env.production
@@ -3,14 +3,14 @@
 NODE_ENV=production
 
 # Server
-PORT=
+PORT=3000
 
 # Database
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
+DB_HOST=postgres.railway.internal
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=fCNPJcxjwvPnKGSazASlekklqxfmKrwY
+DB_NAME=railway
 DB_SYNCHRONIZE=false
 DB_LOGGING=false
 
