feat: implement custom database config for differente environments

--- a/.env.development
+++ b/.env.development
@@ -4,7 +4,7 @@ NODE_ENV=development
 # Server
 PORT=3000
 
-# Database
+# Database - Configuração individual para desenvolvimento local
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
