--- a/.env.production
+++ b/.env.production
@@ -6,11 +6,7 @@ NODE_ENV=production
 PORT=3000
 
 # Database
-DB_HOST=postgres.railway.internal
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=fCNPJcxjwvPnKGSazASlekklqxfmKrwY
-DB_NAME=railway
+DATABASE_URL=postgresql://postgres:fCNPJcxjwvPnKGSazASlekklqxfmKrwY@postgres.railway.internal:5432/railway
 DB_SYNCHRONIZE=false
 DB_LOGGING=false
 
