--- a/.env.development-docker
+++ b/.env.development-docker
@@ -10,7 +10,7 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_NAME=dashboard-sample
-DB_SYNCHRONIZE=true
+DB_SYNCHRONIZE=false
 DB_LOGGING=true
 
 # Application
