--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "postbuild": "npm run migrate:prod",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "npm run start:prod",
     "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "NODE_ENV=development nest start --debug --watch",
     "start:prod": "NODE_ENV=production node dist/main",
     "start:staging": "NODE_ENV=staging node dist/main",
+    "migrate:prod": "NODE_ENV=production npm run typeorm -- migration:run -d dist/database/data-source.js",
+    "deploy": "npm run build && npm run migrate:prod && npm run start:prod",
+    "railway:start": "node railway-start.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -23,11 +27,10 @@
     "migration:show:dev": "NODE_ENV=development npm run typeorm -- migration:show -d src/database/data-source.ts",
     "migration:show:prod": "NODE_ENV=production npm run typeorm -- migration:show -d src/database/data-source.ts",
     "migration:run:dev": "NODE_ENV=development npm run typeorm -- migration:run -d src/database/data-source.ts",
-    "migration:run:prod": "NODE_ENV=production npm run typeorm -- migration:run -d src/database/data-source.ts",
+    "migration:run:prod": "NODE_ENV=production npm run typeorm -- migration:run -d dist/database/data-source.js",
     "migration:revert:dev": "NODE_ENV=development npm run typeorm -- migration:revert -d src/database/data-source.ts",
-    "migration:revert:prod": "NODE_ENV=production npm run typeorm -- migration:revert -d src/database/data-source.ts",
-    "migration:fake:dev": "NODE_ENV=development npm run typeorm -- query \"INSERT INTO migrations (timestamp, name) VALUES (1708301400000, 'CreateUserTable1708301400000')\" -d src/database/data-source.ts",
-    "migration:fake:prod": "NODE_ENV=production npm run typeorm -- query \"INSERT INTO migrations (timestamp, name) VALUES (1708301400000, 'CreateUserTable1708301400000')\" -d src/database/data-source.ts",
+    "migration:revert:prod": "NODE_ENV=production npm run typeorm -- migration:revert -d dist/database/data-source.js",
+    "migration:fake:prod": "NODE_ENV=production npm run typeorm -- query \"INSERT INTO migrations (timestamp, name) VALUES (1708301400000, 'CreateUserTable1708301400000')\" -d dist/database/data-source.js",
     "typeorm": "typeorm-ts-node-esm"
   },
   "keywords": [
